force-app/main/default/objects/wkdw__OnboardingTask__c/wkdw__OnboardingTask__c.object-meta.xml
<CustomObject>
    <description>Custom object that represents a task that an HR agent assigns to a new employee through a transition template</description>
    <label>Transition Plan Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transition Plan Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>