force-app/main/default/objects/wkdw__OnboardingTask__c/fields/wkdw__DisplayName__c.field-meta.xml
<CustomField>
    <fullName>wkdw__DisplayName__c</fullName>
    <description>The task name that employees see in the transition checklist. If left blank, the Task Name is used.</description>
    <inlineHelpText>The task name that employees see in the onboarding checklist. If left blank, the Task Name is used.</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>