force-app/main/default/objects/wkdw__OnboardingTask__c/fields/wkdw__FlowAPIName__c.field-meta.xml
<CustomField>
    <fullName>wkdw__FlowAPIName__c</fullName>
    <description>API name of the flow associated with this task. A flow is optional in order to complete an assigned Task.</description>
    <label>Flow API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>