force-app/main/default/objects/wkdw__OnboardingTask__c/fields/wkdw__StartDayOffset__c.field-meta.xml
<CustomField>
    <fullName>wkdw__StartDayOffset__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Do not use this field</description>
    <label>Start Day Offset DEPRECATED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>