force-app/main/default/objects/wkdw__OnboardingTask__c/listViews/wkdw__All.listView-meta.xml
<ListView>
    <fullName>wkdw__All</fullName>
    <columns>NAME</columns>
    <columns>wkdw__DisplayName__c</columns>
    <columns>wkdw__DisplayDescription__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>